Update Dr. Babasaheb Ambedkar Marathwada University2.html

--- a/Dr. Babasaheb Ambedkar Marathwada University2.html
+++ b/Dr. Babasaheb Ambedkar Marathwada University2.html
@@ -8,7 +8,7 @@
     <title>Dr. Babasaheb Ambedkar Marathwada University</title>
     <script type="text/javascript"
         src="./Dr. Babasaheb Ambedkar Marathwada University2_files/jquery.min.js.download"></script>
-    <link href="./Dr. Babasaheb Ambedkar Marathwada University2_files/template.css" type="text/css" rel="stylesheet">
+    <link href="template.css" type="text/css" rel="stylesheet">
    
     <script type="text/javascript">
         function printDiv() {
