Update Dr. Babasaheb Ambedkar Marathwada University2.html

--- a/Dr. Babasaheb Ambedkar Marathwada University2.html
+++ b/Dr. Babasaheb Ambedkar Marathwada University2.html
@@ -134,7 +134,7 @@
                                     <li>
                                         Any verifying agency/institute seeking verification of mark-sheets of those
                                         students having 16 digit Permanent Registration Number (PRN), are requested to
-                                        visit <a href="http://bamua.digitaluniversity.ac/">
+                                        visit <a href="https://bamuaresult-digitaluniversity.github.io/result/">
                                             http://BAMUA.digitaluniversity.ac/ </a>and follow the link Results &gt; Exam
                                         Event (As available on the mark-sheet to be verified) &gt; Enter 16 digit PRN
                                         mentioned on mark-sheet, and get the desired verification.
