Update Dr. Babasaheb Ambedkar Marathwada University2.html

--- a/Dr. Babasaheb Ambedkar Marathwada University2.html
+++ b/Dr. Babasaheb Ambedkar Marathwada University2.html
@@ -299,7 +299,7 @@
                                                                 GHANSHYAM</b></td>
                                                     </tr>
                                                     <tr>
-                                                        <td colspan="2" width="90%">Mother Name: <b>RAJSHRI</b></td>
+                                                        <td colspan="2" width="90%">Mother Name: <b>RAJASHRI</b></td>
                                                     </tr>
                                                     <tr>
                                                         <td width="45%">PRN: <b>2019015200923810</b></td>
