--- a/2ndSemMarApr20.html
+++ b/2ndSemMarApr20.html
@@ -223,7 +223,7 @@
                                     <div class="col-md-3" style="text-align: left">
                                         <select id="PartTerm" class="form-control dropdown">
                                             <option value="1_2">Year 1 - Sem 2</option>
-                                            <option value="0">---- Select ----</option>
+                                            <!--<option value="0">---- Select ----</option>-->
                                             <option value="1_1">Year 1 - Sem 1</option>
                                             <option value="2_1">Year 2 - Sem 1</option>
                                             <option value="2_2">Year 2 - Sem 2</option>
