--- a/5thSemOctNov21.html
+++ b/5thSemOctNov21.html
@@ -200,7 +200,7 @@
                                     <div class="col-md-3" style="text-align: left">
                                         <select id="Select1" class="form-control dropdown">
                                             <option value="64">Oct/Nov-2021</option>
-                                            <option value="0">---- Select ----</option>
+                                            <!-- <option value="0">---- Select ----</option> -->
                                             <option value="65">Apr/May-2022</option>
                                             <option value="62">Apr/May-2021</option>
                                             <option value="61">Oct/Nov-2020</option>
